--- a/faq.html
+++ b/faq.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title> The World's First Luxury Ride Share App Franchise 
+    </title>
     <meta charset="utf-8" />
     <meta name="viewport" content="initial-scale=1, width=device-width" />
-
+    <link rel="icon" href="public/favicon_io/favicon.ico" type="image/xicon"/>
     <link rel="stylesheet" href="./global.css" />
     <link rel="stylesheet" href="./faq.css" />
     <link
@@ -52,7 +54,7 @@
           <div class="frame-wrapper20">
             <div class="heading-parent27">
               <div class="heading32">
-                THE WORLD'S FIRST LUXURY MEMBERSHIP RIDE SHARE APP
+                THE WORLD'S FIRST LUXURY RIDE SHARE APP FRANCHISE
               </div>
               <div class="paragraph83">
                 Goldsainte is the world’s first luxury membership ride share app
@@ -67,7 +69,7 @@
             <div class="frame-wrapper22">
               <div class="heading-parent28">
                 <div class="heading33">
-                  THE WORLD'S FIRST LUXURY MEMBERSHIP RIDE SHARE APP
+                  THE WORLD'S FIRST LUXURY RIDE SHARE APP FRANCHISE
                 </div>
                 <div class="paragraph83">
                   Goldsainte is the world’s first luxury membership ride share
@@ -101,7 +103,7 @@
       <div class="faq-main-logo">
         <a
           class="primary-horizontal-logo-gold-62"
-          id="primaryHorizontalLogoGold6"
+          id="primaryHorizontalLogoGold6" href="./index.html"
         >
         </a>
       </div>
