--- a/franchise-investment.html
+++ b/franchise-investment.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title> The World's First Luxury Ride Share App Franchise 
+    </title>
     <meta charset="utf-8" />
     <meta name="viewport" content="initial-scale=1, width=device-width" />
-
+    <link rel="icon" href="public/favicon_io/favicon.ico" type="image/xicon"/>
     <link rel="stylesheet" href="./global.css" />
     <link rel="stylesheet" href="./franchise-investment.css" />
     <link
@@ -55,7 +57,7 @@
           <div class="frame-wrapper30">
             <div class="heading-parent38">
               <div class="heading50">
-                THE WORLD'S FIRST LUXURY MEMBERSHIP RIDE SHARE FRANCHISE
+                THE WORLD'S FIRST LUXURY RIDE SHARE APP FRANCHISE
               </div>
               <div class="paragraph106">
                 Goldsainte is the world’s first luxury membership ride share app
@@ -105,7 +107,7 @@
       <div class="franchise-investment-main-logo">
         <a
           class="primary-horizontal-logo-gold-13"
-          id="primaryHorizontalLogoGold1"
+          id="primaryHorizontalLogoGold1" href="./index.html"
         >
         </a>
       </div>
