--- a/franchise-model.html
+++ b/franchise-model.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title> The World's First Luxury Ride Share App Franchise 
+    </title>
     <meta charset="utf-8" />
     <meta name="viewport" content="initial-scale=1, width=device-width" />
-
+    <link rel="icon" href="public/favicon_io/favicon.ico" type="image/xicon"/>
     <link rel="stylesheet" href="./global.css" />
     <link rel="stylesheet" href="./franchise-model.css" />
     <link
@@ -57,7 +59,7 @@
           <div class="frame-heerotext-inner">
             <div class="heading-parent30">
               <div class="heading35">
-                THE WORLD'S FIRST LUXURY MEMBERSHIP RIDE SHARE FRANCHISE
+                THE WORLD'S FIRST LUXURY RIDE SHARE APP FRANCHISE
               </div>
               <div class="paragraph88">
                 Goldsainte is the world’s first luxury membership ride share app
@@ -71,7 +73,7 @@
           <div class="frame-wrapper24">
             <div class="heading-parent31">
               <div class="heading36">
-                THE WORLD'S FIRST LUXURY MEMBERSHIP RIDE SHARE FRANCHISE
+                THE WORLD'S FIRST LUXURY RIDE SHARE APP FRANCHISE
               </div>
               <div class="paragraph88">
                 Goldsainte is the world’s first luxury membership ride share app
@@ -118,7 +120,7 @@
       <div class="franchise-model-main-logo">
         <a
           class="primary-horizontal-logo-gold-9"
-          id="primaryHorizontalLogoGold9"
+          id="primaryHorizontalLogoGold9" href="./index.html"
         >
         </a>
       </div>
